    Saxena via Colin P. McCabe)

    HADOOP-12107. long running apps may have a huge number of StatisticsData
    instances under FileSystem (Sangjin Lee via Ming Ma)

    HADOOP-11762. Enable swift distcp to secure HDFS (Chen He via aw)

    HADOOP-12009. Clarify FileSystem.listStatus() sorting order & fix
    FileSystemContractBaseTest:testListStatus. (J.Andreina via jghoman)

  OPTIMIZATIONS

    HADOOP-7761. Improve the performance of raw comparisons. (todd)

    HADOOP-8589. ViewFs tests fail when tests and home dirs are nested (sanjay Radia)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-11746. rewrite test-patch.sh (aw)

  NEW FEATURES

    HADOOP-11226. Add a configuration to set ipc.Client's traffic class with
    IPTOS_LOWDELAY|IPTOS_RELIABILITY. (Gopal V via ozawa)

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

    HADOOP-11843. Make setting up the build environment easier.
    (Niels Basjes via cnauroth)

    HADOOP-11949. Add user-provided plugins to test-patch (Sean Busbey via aw)

    HADOOP-8934. Shell command ls should include sort options (Jonathan Allen
    via aw)

    HADOOP-10971. Add -C flag to make `hadoop fs -ls` print filenames only.
    (Kengo Seki via aajisaka)

    HADOOP-5732. Add SFTP FileSystem. (Ramtin Boustani and Inigo Goiri via
    cdouglas)

  IMPROVEMENTS

    HADOOP-12271. Hadoop Jar Error Should Be More Explanatory
    (Josh Elser via harsh)

    HADOOP-6842. "hadoop fs -text" does not give a useful text representation
    of MapWritable objects (Akira Ajisaka via bobby)

    HADOOP-11719. [Fsshell] Remove bin/hadoop reference from
    GenericOptionsParser default help text.
    (Brahma Reddy Battula via harsh)

    HADOOP-11692. Improve authentication failure WARN message to avoid user
    confusion. (Yongjun Zhang)

    HADOOP-11659. o.a.h.fs.FileSystem.Cache#remove should use a single hash map
    lookup. (Brahma Reddy Battula via aajisaka)
